--- a/README
+++ b/README
@@ -6,3 +6,4 @@ sbatch run.sh > log
 squeue -u cmsc714-1bv7
 
 bash -c 'diff <(sort slurm-9840597.out) <(sort final.data.out)'
+bash -c 'diff <(sort slurm-9840596.out) <(sort life.data.2.100.250.250.out)'
